# fastapi-base-setup

./: .env.example  .flake8  .gitignore  Makefile  alembic.ini  docker-compose.yml  env.example
advanced/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  deploy.sh  docker-compose.yml  logging_config.json  pyproject.toml
advanced/app/: main.py
advanced/app/admin/: views.py
advanced/app/api/: routers.py
advanced/app/configs/: __init__.py  auth.py  database.py  emails.py  general.py  logger.py
advanced/app/postgresql/: database.py
advanced/app/postgresql/migrations/: env.py
advanced/app/postgresql/migrations/versions/: 0466a075a731_.py  5de528b89cdb_.py
advanced/app/postgresql/models/: annotes.py  base.py  tokens.py  users.py
advanced/app/src/configs/: db.py  general.py  graphql.py  logger.py
advanced/app/src/inputs/: products.py
advanced/app/src/object_types/: products.py
advanced/app/src/repositories/: base.py  product.py
advanced/app/src/resolvers/: products.py
advanced/app/tests/: test_repository.py
advanced/docker/app/: Dockerfile
advanced/docker/nginx/: Dockerfile  nginx.conf
advanced/k8s/: configmap.yaml  namespace.yaml  secret.yaml
advanced/k8s/adminer/: deployment.yaml  service.yaml
advanced/k8s/backend/: deployment.yaml  service.yaml
advanced/k8s/nginx/: deployment.yaml  pvc.yaml  service.yaml
advanced/k8s/postgres/: deployment.yaml  pv.yaml  pvc.yaml  service.yaml
app/: main.py
docker/: .dockerignore  env.example
requirements/: base.txt
simple/: .env.example  .flake8  .gitignore  Makefile
(+43 files in other folders)
