[tool.poetry]
name = "advanced"
version = "0.1.0"
description = ""
authors = ["OleksandrYanchar <contact.oleksandryanchar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "2.0.31"
psycopg2-binary = "2.9.9"
pydantic = "2.8.2"
alembic = "1.13.2"
pillow = "10.4.0"
pyjwt = "2.8.0"
ujson = "5.10.0"
pyhumps = "3.8.0"
passlib = "1.7.4"
fastapi-mail = "1.4.1"
aiofiles = "24.1.0"
python-jose = "3.3.0"
asyncpg = "0.29.0"
pre-commit = "^3.8.0"
pydantic-settings = "^2.4.0"
sqladmin = {extras = ["full"], version = "^0.18.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 2
src_paths = ["core", ]
skip_glob = [
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
]
known_fastapi = ["fastapi"]
known_first_party = ["app"]
sections = [
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]